RESOLVED FIXED241572
REGRESSION (251426@main): [ macOS Debug wk2 ] http/tests/media/modern-media-controls/skip-back-support/skip-back-support-button-click.html is a flaky crash
https://bugs.webkit.org/show_bug.cgi?id=241572
Summary REGRESSION (251426@main): [ macOS Debug wk2 ] http/tests/media/modern-media-c...
Karl Rackler
Reported 2022-06-13 15:13:41 PDT
Description: http/tests/media/modern-media-controls/skip-back-support/skip-back-support-button-click.html The first more frequent series of flaky crashes that I saw on the dashboard was on 6/9/2022 at 251426@main. REPRODUCTION STEPS I can reproduce this on 251426@main, but unable to reproduce it on 251425@main or earlier. Command: run-webkit-tests --debug --exit-after-n-failures 1 --exit-after-n-crashes-or-timeouts 1 --iterations 50 -f --no-retry http/tests/media/modern-media-controls/skip-back-support/skip-back-support-button-click.html Result: Unexpected flakiness: crashes (1) http/tests/media/modern-media-controls/skip-back-support/skip-back-support-button-click.html [ Pass Crash ] History: https://results.webkit.org/?suite=layout-tests&test=http%2Ftests%2Fmedia%2Fmodern-media-controls%2Fskip-back-support%2Fskip-back-support-button-click.html&platform=mac&flavor=wk2&style=debug&limit=50000 Crash Log: No crash log found for com.apple.WebKit.WebContent.Development:88822. stdout: stderr: ERROR: Invalid Content-Type string '' ./platform/network/ParsedContentType.cpp(236) : bool WebCore::ParsedContentType::parseContentType(WebCore::Mode) SHOULD NEVER BE REACHED /Volumes/Data/worker/Apple-Monterey-Debug-Build/build/WebKitBuild/Debug/DerivedSources/WebKit/RemoteMediaResourceManagerMessageReceiver.cpp(89) : static void Messages::RemoteMediaResourceManager::DataReceived::callReply(IPC::Decoder &, CompletionHandler<void (WebKit::SharedMemory::IPCHandle &&)> &&) 1 0x2dc430789 WTFCrash 2 0x2b42e116b WTFCrashWithInfo(int, char const*, char const*, int) 3 0x2b4996bef Messages::RemoteMediaResourceManager::DataReceived::callReply(IPC::Decoder&, WTF::CompletionHandler<void (WebKit::SharedMemory::IPCHandle&&)>&&) 4 0x2b6673dd8 unsigned long long IPC::Connection::sendWithAsyncReply<Messages::RemoteMediaResourceManager::DataReceived, WebKit::RemoteMediaResourceProxy::dataReceived(WebCore::PlatformMediaResource&, WebCore::SharedBuffer const&)::$_12>(Messages::RemoteMediaResourceManager::DataReceived&&, WebKit::RemoteMediaResourceProxy::dataReceived(WebCore::PlatformMediaResource&, WebCore::SharedBuffer const&)::$_12&&, unsigned long long, WTF::OptionSet<IPC::SendOption>)::'lambda'(IPC::Decoder*)::operator()(IPC::Decoder*) 5 0x2b6673d21 WTF::Detail::CallableWrapper<unsigned long long IPC::Connection::sendWithAsyncReply<Messages::RemoteMediaResourceManager::DataReceived, WebKit::RemoteMediaResourceProxy::dataReceived(WebCore::PlatformMediaResource&, WebCore::SharedBuffer const&)::$_12>(Messages::RemoteMediaResourceManager::DataReceived&&, WebKit::RemoteMediaResourceProxy::dataReceived(WebCore::PlatformMediaResource&, WebCore::SharedBuffer const&)::$_12&&, unsigned long long, WTF::OptionSet<IPC::SendOption>)::'lambda'(IPC::Decoder*), void, IPC::Decoder*>::call(IPC::Decoder*) 6 0x2b585c9d7 WTF::Function<void (IPC::Decoder*)>::operator()(IPC::Decoder*) const 7 0x2b583a9b0 WTF::CompletionHandler<void (IPC::Decoder*)>::operator()(IPC::Decoder*) 8 0x2b583a61a IPC::Connection::dispatchMessage(IPC::Decoder&) 9 0x2b583adc5 IPC::Connection::dispatchMessage(std::__1::unique_ptr<IPC::Decoder, std::__1::default_delete<IPC::Decoder> >) 10 0x2b583b3cd IPC::Connection::dispatchOneIncomingMessage() 11 0x2b585c305 IPC::Connection::enqueueIncomingMessage(std::__1::unique_ptr<IPC::Decoder, std::__1::default_delete<IPC::Decoder> >)::$_15::operator()() 12 0x2b585c219 WTF::Detail::CallableWrapper<IPC::Connection::enqueueIncomingMessage(std::__1::unique_ptr<IPC::Decoder, std::__1::default_delete<IPC::Decoder> >)::$_15, void>::call() 13 0x2dc45fdd2 WTF::Function<void ()>::operator()() const 14 0x2dc4fbb5e WTF::RunLoop::performWork() 15 0x2dc5005be WTF::RunLoop::performWork(void*) 16 0x7ff813034aeb __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__ 17 0x7ff813034a53 __CFRunLoopDoSource0 18 0x7ff8130347cd __CFRunLoopDoSources0 19 0x7ff8130331e8 __CFRunLoopRun 20 0x7ff8130327ac CFRunLoopRunSpecific 21 0x7ff813e86d9a -[NSRunLoop(NSRunLoop) runMode:beforeDate:] 22 0x7ff813f118d7 -[NSRunLoop(NSRunLoop) run] 23 0x7ff812cb2816 _xpc_objc_main 24 0x7ff812cb2239 xpc_main 25 0x2b50c22d0 WebKit::XPCServiceMain(int, char const**) 26 0x2b721084b WKXPCServiceMain 27 0x10c2f5f22 main 28 0x11ac6a51e com.apple.WebKit.WebContent.Development terminated (pid 88822) for reason: crash LEAK: 1 WebPageProxy
Attachments
Radar WebKit Bug Importer
Comment 1 2022-06-13 15:14:31 PDT
Karl Rackler
Comment 2 2022-06-13 15:22:42 PDT
I have marked this test as a flaky crash while this issue is investigated.
Karl Rackler
Comment 3 2022-06-13 15:28:32 PDT
EWS
Comment 4 2022-06-13 15:34:30 PDT
Test gardening commit r295503 (251508@main): <https://commits.webkit.org/251508@main> Reviewed commits have been landed. Closing PR #1483 and removing active labels.
Jean-Yves Avenard [:jya]
Comment 5 2022-06-13 19:06:44 PDT
EWS
Comment 6 2022-06-13 21:47:04 PDT
Committed r295515 (251520@main): <https://commits.webkit.org/251520@main> Reviewed commits have been landed. Closing PR #1490 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.