Cherry-pick 623a598f89ff. rdar://problem/95059414

REGRESSION (251426@main): [ macOS Debug wk2 ] http/tests/media/modern-media-controls/skip-back-support/skip-back-support-button-click.html is a flaky crash
    https://bugs.webkit.org/show_bug.cgi?id=241572
    rdar://problem/95059414

    Reviewed by Cameron McCormack.

    In bug 241455 it was incorrectly assumed that checking that the IPCHandle was null
    was a sufficient test to check the validity of the reply. However, this ignore the
    fact that the IPC decoder will assert if the size isn't valid.
    So rather than returning a Handle directly, we return an optional<Handle> instead.

    Covered by the existing test.

    * LayoutTests/platform/mac-wk2/TestExpectations:
    * Source/WebKit/GPUProcess/media/RemoteMediaResourceManager.cpp:
    (WebKit::RemoteMediaResourceManager::dataReceived):
    * Source/WebKit/GPUProcess/media/RemoteMediaResourceManager.h:
    * Source/WebKit/GPUProcess/media/RemoteMediaResourceManager.messages.in:
    * Source/WebKit/GPUProcess/media/RemoteSourceBufferProxy.cpp:
    (WebKit::RemoteSourceBufferProxy::append):
    * Source/WebKit/GPUProcess/media/RemoteSourceBufferProxy.h:
    * Source/WebKit/GPUProcess/media/RemoteSourceBufferProxy.messages.in:
    * Source/WebKit/WebProcess/GPU/media/RemoteMediaResourceProxy.cpp:
    (WebKit::RemoteMediaResourceProxy::dataReceived):
    * Source/WebKit/WebProcess/GPU/media/SourceBufferPrivateRemote.cpp:
    (WebKit::SourceBufferPrivateRemote::append):

    Canonical link: https://commits.webkit.org/251520@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@295515 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/251460.3@safari-7614.1.17-branch