Source/WebKit/WebProcess/GPU/media/SourceBufferPrivateRemote.cpp
@@ -86,8 +86,8 @@ void SourceBufferPrivateRemote::append(Ref<SharedBuffer>&& data)
 
     m_gpuProcessConnection->connection().sendWithAsyncReply(Messages::RemoteSourceBufferProxy::Append(IPC::SharedBufferReference { WTFMove(data) }), [] (auto&& bufferHandle) {
         // Take ownership of shared memory and mark it as media-related memory.
-        if (!bufferHandle.handle.isNull())
-            bufferHandle.handle.takeOwnershipOfMemory(MemoryLedger::Media);
+        if (bufferHandle)
+            bufferHandle->handle.takeOwnershipOfMemory(MemoryLedger::Media);
     }, m_remoteSourceBufferIdentifier);
 }
 
